[workspace]
members = [
    "crates/sui-network",
    "crates/x",
    "faucet",
    "sui",
    "sui/open_rpc",
    "sui/open_rpc/macros",
    "sui_core",
    "sui_programmability/adapter",
    "sui_programmability/adapter/transactional-tests",
    "sui_programmability/framework",
    "sui_programmability/transactional-test-runner",
    "sui_programmability/verifier",
    "sui_types",
    "test_utils",
]

[profile.release]
debug = false
strip = "debuginfo"

[profile.bench]
debug = true

[patch.crates-io]
tonic-build = { git = "https://github.com/hyperium/tonic.git", rev = "de2e4ac077c076736dc451f3415ea7da1a61a560" }
